force-app/main/default/objects/Integration_Queue__c/Integration_Queue__c.object-meta.xml
<CustomObject>
    <description>External portal integration queue.</description>
    <label>Integration Queue</label>
    <nameField>
        <displayFormat>INQ-{0000}</displayFormat>
        <label>Integration Queue #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>