force-app/main/default/objects/Integration_Queue__c/fields/Payload1__c.field-meta.xml
<CustomField>
    <fullName>Payload1__c</fullName>
    <label>Payload1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>