force-app/main/default/objects/Integration_Queue__c/fields/Payload2__c.field-meta.xml
<CustomField>
    <fullName>Payload2__c</fullName>
    <label>Payload2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>