force-app/main/default/objects/Integration_Queue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready To Sync</fullName>
                <default>true</default>
                <label>Ready To Sync</label>
            </value>
            <value>
                <fullName>Sync Succeeded</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>