force-app/main/default/objects/Integration_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Type__c</columns>
    <columns>Object_Id__c</columns>
    <columns>Object_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Target_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>